# comp3046_proj2_ec

./: .gitignore  CMakeLists.txt  run_perf.py
src/: gaussian.c  gaussian.h  gaussian_omp.c  gaussian_omp.h  gaussian_validate.c  gaussian_validate.h  main.c  matrix.h  printf_if.c  printf_if.h  vector.c  vector.h
